--- a/Dockerfile-gym
+++ b/Dockerfile-gym
@@ -37,7 +37,18 @@ RUN chmod +x /bin/tini
 ADD image /
 RUN pip install setuptools wheel && pip install -r /usr/lib/web/requirements.txt
 
+# install gym
+RUN apt-get update && \
+    apt-get -y install xvfb zlib1g python-opengl ffmpeg libsdl2-2.0-0 libboost-python1.58.0 libboost-thread1.58.0 libboost-filesystem1.58.0 libboost-system1.58.0 fluidsynth build-essential swig python-dev cmake zlib1g-dev libsdl2-dev libboost-all-dev wget unzip && \
+    /usr/local/bin/pip --no-cache-dir install --upgrade 'gym[all]'
+
+# Jupyter Notebook
+EXPOSE 8888
+# TensorBoard
+EXPOSE 6006
+# Web VNC
 EXPOSE 80
+
 WORKDIR /root
 ENV HOME=/home/ubuntu \
     SHELL=/bin/bash
