[fix] unable to render Atari

--- a/image/etc/supervisor/conf.d/supervisord.conf
+++ b/image/etc/supervisor/conf.d/supervisord.conf
@@ -1,7 +1,7 @@
 [program:xvfb]
 priority=10
 directory=/
-command=/usr/bin/Xvfb :1 -screen 0 1024x768x16
+command=/usr/bin/Xvfb :0 -screen 0 1400x900x24
 user=root
 autostart=true
 autorestart=true
@@ -17,7 +17,7 @@ user=root
 autostart=true
 autorestart=true
 stopsignal=QUIT
-environment=DISPLAY=":1",HOME="/root",USER="root"
+environment=DISPLAY=":0",HOME="/root",USER="root"
 stdout_logfile=/var/log/openbox.log
 redirect_stderr=true
 
@@ -29,7 +29,7 @@ user=root
 autostart=true
 autorestart=true
 stopsignal=QUIT
-environment=DISPLAY=":1",HOME="/root",USER="root"
+environment=DISPLAY=":0",HOME="/root",USER="root"
 stdout_logfile=/var/log/lxpanel.log
 redirect_stderr=true
 
@@ -41,14 +41,14 @@ user=root
 autostart=true
 autorestart=true
 stopsignal=QUIT
-environment=DISPLAY=":1",HOME="/root",USER="root"
+environment=DISPLAY=":0",HOME="/root",USER="root"
 stdout_logfile=/var/log/pcmanfm.log
 
 
 [program:x11vnc]
 priority=20
 directory=/
-command=x11vnc -display :1 -xkb -forever -shared
+command=x11vnc -forever -display :0 -auth /var/run/lxdm/lxdm-\:0.auth -rfbauth /.password2 -xkb -repeat
 user=root
 autostart=true
 autorestart=true
