delete verbose files

--- a/Dockerfile-gym
+++ b/Dockerfile-gym
@@ -40,7 +40,10 @@ RUN pip install setuptools wheel && pip install -r /usr/lib/web/requirements.txt
 # install gym
 RUN apt-get update && \
     apt-get -y install xvfb zlib1g python-opengl ffmpeg libsdl2-2.0-0 libboost-python1.58.0 libboost-thread1.58.0 libboost-filesystem1.58.0 libboost-system1.58.0 fluidsynth build-essential swig python-dev cmake zlib1g-dev libsdl2-dev libboost-all-dev wget unzip && \
-    /usr/local/bin/pip --no-cache-dir install --upgrade 'gym[all]'
+    /usr/local/bin/pip --no-cache-dir install --upgrade 'gym[all]' && \
+    apt-get autoclean && \
+    apt-get autoremove && \
+    rm -r /var/lib/apt/lists/* /root/.cache/pip/
 
 # Jupyter Notebook
 EXPOSE 8888
